Added Bootstrap Framework

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>SampleReact</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 
+<!-- Bootstrap core JavaScript -->
+<script src="/javascripts/bootstrap.min.js"></script>
 </body>
 </html>
