Added jQuery Library

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<!-- jQuery Library -->
+<script src="/javascripts/jquery.min.js"></script>
 <!-- Bootstrap core JavaScript -->
 <script src="/javascripts/bootstrap.min.js"></script>
 </body>
