Added ReactJS Library

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 <script src="/javascripts/jquery.min.js"></script>
 <!-- Bootstrap core JavaScript -->
 <script src="/javascripts/bootstrap.min.js"></script>
+<!--React Library-->
+<script src="/javascripts/react.min.js"></script>
+<script src="/javascripts/react-dom.min.js"></script>
 </body>
 </html>
