Added Babel Transpiler

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 <!--React Library-->
 <script src="/javascripts/react.min.js"></script>
 <script src="/javascripts/react-dom.min.js"></script>
+<!--Babel Transpiler-->
+<script src="/javascripts/browser.min.js"></script>
 </body>
 </html>
