--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <!-- Default stylesheet -->
+    <link href="/stylesheets/default.css" rel="stylesheet">
 </head>
 
 <body>
 
-<!-- jQuery Library -->
-<script src="/javascripts/jquery.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script src="/javascripts/bootstrap.min.js"></script>
-<!--React Library-->
-<script src="/javascripts/react.min.js"></script>
-<script src="/javascripts/react-dom.min.js"></script>
-<!--Babel Transpiler-->
-<script src="/javascripts/browser.min.js"></script>
+    <div id="app"></div>
+
+    <!-- ============================================ -->
+    <!-- jQuery Library -->
+    <script src="/javascripts/jquery.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <!--React Library-->
+    <script src="/javascripts/react.min.js"></script>
+    <script src="/javascripts/react-dom.min.js"></script>
+    <!--Babel Transpiler-->
+    <script src="/javascripts/browser.min.js"></script>
 </body>
 </html>
