Added React Layout

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 
 <body>
 
-    <div id="app"></div>
+<div id="app"></div>
 
-    <!-- ============================================ -->
-    <!-- jQuery Library -->
-    <script src="/javascripts/jquery.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script src="/javascripts/bootstrap.min.js"></script>
-    <!--React Library-->
-    <script src="/javascripts/react.min.js"></script>
-    <script src="/javascripts/react-dom.min.js"></script>
-    <!--Babel Transpiler-->
-    <script src="/javascripts/browser.min.js"></script>
+<script type="text/babel" src="/views/layout.js"></script>
+<!-- ============================================ -->
+<!-- jQuery Library -->
+<script src="/javascripts/jquery.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="/javascripts/bootstrap.min.js"></script>
+<!--React Library-->
+<script type="text/javascript" src="/javascripts/react.min.js"></script>
+<script type="text/javascript" src="/javascripts/react-dom.min.js"></script>
+<!--Babel Transpiler-->
+<script type="text/javascript" src="/javascripts/browser.min.js"></script>
 </body>
 </html>
